parser/src/test/resources/corpus/valid/51_type_extension.ff
type extension PrivateEquityFund extends Fund {
  field commitment_period: Period
  field investment_period_end: BusinessDate
  field gp_commitment: Percentage
}
