parser/src/test/resources/corpus/invalid/51_type_ext_missing_extends.ff
type extension PeFund Fund {
  field commitment_period: Period
}
